--- a/data/css/media.scss
+++ b/data/css/media.scss
@@ -20,6 +20,7 @@
         width: 100%;
         height: 100%;
         transform: none;
+        position: fixed;
         padding: 30px;
         flex-wrap: wrap;
         h2{
