--- a/data/css/media.css
+++ b/data/css/media.css
@@ -19,6 +19,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    overflow: auto;
     -webkit-transform: none;
             transform: none;
     position: fixed;
@@ -37,6 +38,42 @@
   .city-list div a {
     width: calc(50% - 30px);
     margin: 15px;
+  }
+  .shares-list {
+    overflow-x: scroll;
+    width: 100%;
+    display: -webkit-box;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+    margin: 20px 15px 0;
+  }
+  .shares-list .shares-left {
+    width: 300px;
+  }
+  .shares-list .shares-right {
+    display: -webkit-box;
+    -ms-flex-wrap: unset;
+        flex-wrap: unset;
+  }
+  .shares-list .shares-right .shares-items {
+    height: 100%;
+    width: 300px;
+  }
+  .shares-list .shares-items .shares-caption {
+    -ms-flex-wrap: unset;
+        flex-wrap: unset;
+    left: 0;
+  }
+  .shares-list .shares-items .shares-caption h5 {
+    font-size: 1em;
+    font-weight: 400;
+    max-width: 80%;
+    margin-bottom: 10px;
   }
 }
 
@@ -60,7 +97,9 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    height: 22vh;
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
     margin: 20px 15px 0;
   }
   .shares-list .shares-left {
@@ -81,7 +120,7 @@
     left: 0;
   }
   .shares-list .shares-items .shares-caption h5 {
-    font-size: 1em;
+    font-size: .9em;
     font-weight: 400;
     max-width: 90%;
     margin-bottom: 10px;
@@ -97,6 +136,36 @@
   }
   .btn-grp button {
     margin: 5px auto;
+  }
+  .application-btn {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+@media only screen and (max-width: 768px) and (max-height: 1024px) {
+  .shares-list .shares-left {
+    width: 300px;
+  }
+  .shares-list .shares-right {
+    display: -webkit-box;
+    -ms-flex-wrap: unset;
+        flex-wrap: unset;
+  }
+  .shares-list .shares-right .shares-items {
+    height: 100%;
+    width: 300px;
+  }
+  .shares-list .shares-items .shares-caption {
+    -ms-flex-wrap: unset;
+        flex-wrap: unset;
+    left: 0;
+  }
+  .shares-list .shares-items .shares-caption h5 {
+    font-size: 1em;
+    font-weight: 400;
+    max-width: 80%;
+    margin-bottom: 10px;
   }
 }
 /*# sourceMappingURL=media.css.map */
