--- a/data/css/media.scss
+++ b/data/css/media.scss
@@ -1,3 +1,5 @@
+
+
 @media only screen and (max-width: 992px){
     .menu{
         display: none;
@@ -19,6 +21,7 @@
         left: 0;
         width: 100%;
         height: 100%;
+        overflow: auto;
         transform: none;
         position: fixed;
         padding: 30px;
@@ -36,6 +39,36 @@
                 width: calc(50% - 30px);
                 margin: 15px;
             }
+        }
+    }
+
+    .shares-list{
+        overflow-x: scroll;
+        width: 100%;
+        display: -webkit-box;
+        flex-direction: row;
+        height: max-content;
+        margin: 20px 15px 0;
+    }
+    .shares-list .shares-left{
+        width: 300px;
+    }
+    .shares-list .shares-right{
+        display: -webkit-box;
+        flex-wrap: unset;
+    }
+    .shares-list .shares-right .shares-items{
+        height: 100%;
+        width: 300px;
+    }
+    .shares-list .shares-items .shares-caption{
+        flex-wrap: unset;
+        left: 0;
+        h5{
+            font-size: 1em;
+            font-weight: 400;
+            max-width: 80%;
+            margin-bottom: 10px;
         }
     }
 }
@@ -57,7 +90,7 @@
         width: 100%;
         display: -webkit-box;
         flex-direction: row;
-        height: 22vh;
+        height: max-content;
         margin: 20px 15px 0;
     }
     .shares-list .shares-left{
@@ -75,7 +108,7 @@
         flex-wrap: unset;
         left: 0;
         h5{
-            font-size: 1em;
+            font-size: .9em;
             font-weight: 400;
             max-width: 90%;
             margin-bottom: 10px;
@@ -95,6 +128,34 @@
     .btn-grp{
         button{
             margin: 5px auto;
+        }
+    }
+    .application-btn{
+        width: 40px;
+        height: 40px;
+    }
+}
+
+@media only screen and (max-width: 768px) and (max-height: 1024px){
+    .shares-list .shares-left{
+        width: 300px;
+    }
+    .shares-list .shares-right{
+        display: -webkit-box;
+        flex-wrap: unset;
+    }
+    .shares-list .shares-right .shares-items{
+        height: 100%;
+        width: 300px;
+    }
+    .shares-list .shares-items .shares-caption{
+        flex-wrap: unset;
+        left: 0;
+        h5{
+            font-size: 1em;
+            font-weight: 400;
+            max-width: 80%;
+            margin-bottom: 10px;
         }
     }
 }
