--- a/data/css/style.css
+++ b/data/css/style.css
@@ -1,7 +1,7 @@
 body {
-  background: #F9F9F9;
+  background: #f9f9f9;
   font-family: "Gilroy";
-  color: #0B2A49;
+  color: #0b2a49;
 }
 
 a {
@@ -35,6 +35,71 @@ button {
 
 .navbar .navbar-brand {
   margin: 0;
+}
+
+.application-btn {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  background: #e20001;
+  padding: 10px;
+  z-index: 99999;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 50%;
+  -webkit-animation: ripple 3s ease-out infinite;
+          animation: ripple 3s ease-out infinite;
+}
+
+.application-btn img {
+  max-width: 50px;
+  width: 100%;
+}
+
+.application-btn::before, .application-btn::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 50%;
+  -webkit-animation: ripple 3s ease-out infinite 3s;
+          animation: ripple 3s ease-out infinite 3s;
+}
+
+.application-btn::after {
+  -webkit-animation: ripple 3s ease-out infinite 2s;
+          animation: ripple 3s ease-out infinite 2s;
+}
+
+@-webkit-keyframes ripple {
+  0% {
+    -webkit-box-shadow: 0 0 0 0.5rem rgba(248, 5, 5, 0.2);
+            box-shadow: 0 0 0 0.5rem rgba(248, 5, 5, 0.2);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 2.5rem rgba(255, 255, 255, 0);
+            box-shadow: 0 0 0 2.5rem rgba(255, 255, 255, 0);
+  }
+}
+
+@keyframes ripple {
+  0% {
+    -webkit-box-shadow: 0 0 0 0.5rem rgba(248, 5, 5, 0.2);
+            box-shadow: 0 0 0 0.5rem rgba(248, 5, 5, 0.2);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 2.5rem rgba(255, 255, 255, 0);
+            box-shadow: 0 0 0 2.5rem rgba(255, 255, 255, 0);
+  }
 }
 
 .menu-btn {
@@ -78,12 +143,12 @@ button {
 .menu-left li a {
   color: #111;
   text-decoration: none;
-  -webkit-transition: color .2s;
-  transition: color .2s;
+  -webkit-transition: color 0.2s;
+  transition: color 0.2s;
 }
 
 .menu-left li a:hover {
-  color: #E20001;
+  color: #e20001;
 }
 
 .menu-right {
@@ -104,14 +169,13 @@ button {
 
 .menu-right .login {
   color: #111;
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  transition: all 0.2s;
   -webkit-transition: all 0.2s;
   position: relative;
 }
 
 .menu-right .login:hover {
-  color: #E20001;
+  color: #e20001;
 }
 
 .menu-right img {
@@ -121,12 +185,12 @@ button {
 
 #city {
   cursor: pointer;
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 #city:hover {
-  color: #E20001;
+  color: #e20001;
 }
 
 .lang-btn {
@@ -137,14 +201,14 @@ button {
 }
 
 .lang-btn:hover {
-  color: #E20001;
+  color: #e20001;
 }
 
 .city-list {
   display: none;
   position: absolute;
   z-index: 9999;
-  width: calc( 100% - 30px);
+  width: calc(100% - 30px);
   background: #fff;
   left: 50%;
   -webkit-transform: translateX(-50%);
@@ -180,24 +244,23 @@ button {
 .city-list a {
   margin: 20px;
   color: #333;
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  transition: all 0.2s;
   -webkit-transition: all 0.2s;
 }
 
 .city-list a:hover {
-  color: #E20001;
+  color: #e20001;
 }
 
 .city-list .active {
-  background: #E20001;
+  background: #e20001;
   padding: 5px 10px;
   text-align: center;
   color: #fff !important;
 }
 
 .subnav {
-  background: #E20001;
+  background: #e20001;
 }
 
 .subnav ul {
@@ -219,6 +282,7 @@ button {
 }
 
 .mobile-menu {
+  overflow: auto;
   display: none;
   position: fixed;
   z-index: 9999;
@@ -256,8 +320,10 @@ button {
   margin-right: 5px;
 }
 
-.mobile-menu ul li a, .mobile-menu ul li button, .mobile-menu ul li #city1 {
-  color: #0B2A49;
+.mobile-menu ul li a,
+.mobile-menu ul li button,
+.mobile-menu ul li #city1 {
+  color: #0b2a49;
   padding: 0;
   font-weight: 600;
 }
@@ -330,14 +396,14 @@ button {
   z-index: 99;
   height: 100%;
   width: 100%;
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
   background: rgba(0, 0, 0, 0.3);
 }
 
 .shares-list img {
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
   width: 100%;
   top: 0;
   left: 0;
@@ -385,7 +451,7 @@ h4.section-title::before {
   width: 70px;
   content: "";
   height: 1px;
-  background: #E20001;
+  background: #e20001;
 }
 
 .owl-dots {
@@ -394,18 +460,18 @@ h4.section-title::before {
 
 .owl-dots span {
   background: none !important;
-  border: 1px solid #E20001;
+  border: 1px solid #e20001;
 }
 
 .owl-dots .active span {
-  background: #E20001 !important;
+  background: #e20001 !important;
   position: relative;
 }
 
 .owl-dots .active span::after {
   position: absolute;
   content: "";
-  border: 1px solid #E20001;
+  border: 1px solid #e20001;
   width: 16px;
   height: 16px;
   top: 50%;
@@ -416,17 +482,17 @@ h4.section-title::before {
 }
 
 .more-btn {
-  background: #E20001;
+  background: #e20001;
   color: #fbfbfb;
   padding: 10px 30px;
   border-radius: 50px;
-  border: 1px solid #E20001;
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  border: 1px solid #e20001;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .more-btn:hover {
-  color: #E20001;
+  color: #e20001;
   background: none;
 }
 
@@ -439,7 +505,7 @@ h4.section-title::before {
 }
 
 .inner-services .service-link {
-  color: #0B2A49;
+  color: #0b2a49;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -465,13 +531,13 @@ h4.section-title::before {
   max-width: 120px;
   height: 70px;
   margin: 10px auto;
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .inner-services .service-link h5 {
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .inner-services .service-link:hover img {
@@ -480,7 +546,7 @@ h4.section-title::before {
 }
 
 .inner-services .service-link:hover h5 {
-  color: #E20001;
+  color: #e20001;
 }
 
 .partner-link {
@@ -489,14 +555,14 @@ h4.section-title::before {
 
 .partner-link img {
   padding: 3px;
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
   border: 1px solid transparent;
   border-radius: 50%;
 }
 
 .partner-link:hover img {
-  border: 1px solid #E20001;
+  border: 1px solid #e20001;
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
@@ -510,7 +576,7 @@ h4.section-title::before {
 }
 
 .unired-mobile-section h4 {
-  color: #E20001;
+  color: #e20001;
 }
 
 .unired-mobile-section h4::before {
@@ -527,14 +593,14 @@ h4.section-title::before {
 }
 
 .unired-mobile-section button:hover path {
-  -webkit-transition: all .2s;
-  transition: all .2s;
-  fill: #E20001 !important;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  fill: #e20001 !important;
 }
 
 .unired-mobile-section button svg {
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
   fill: #fff;
   margin-right: 10px;
 }
@@ -576,12 +642,12 @@ h4.section-title::before {
   height: 28px;
   padding-bottom: 2px;
   border-radius: 50%;
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .footer .social-icons li:hover {
-  border: 1px solid #0B2A49;
+  border: 1px solid #0b2a49;
 }
 
 @media only screen and (max-width: 992px) {
@@ -605,6 +671,7 @@ h4.section-title::before {
     left: 0;
     width: 100%;
     height: 100%;
+    overflow: auto;
     -webkit-transform: none;
             transform: none;
     position: fixed;
@@ -623,6 +690,42 @@ h4.section-title::before {
   .city-list div a {
     width: calc(50% - 30px);
     margin: 15px;
+  }
+  .shares-list {
+    overflow-x: scroll;
+    width: 100%;
+    display: -webkit-box;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+    margin: 20px 15px 0;
+  }
+  .shares-list .shares-left {
+    width: 300px;
+  }
+  .shares-list .shares-right {
+    display: -webkit-box;
+    -ms-flex-wrap: unset;
+        flex-wrap: unset;
+  }
+  .shares-list .shares-right .shares-items {
+    height: 100%;
+    width: 300px;
+  }
+  .shares-list .shares-items .shares-caption {
+    -ms-flex-wrap: unset;
+        flex-wrap: unset;
+    left: 0;
+  }
+  .shares-list .shares-items .shares-caption h5 {
+    font-size: 1em;
+    font-weight: 400;
+    max-width: 80%;
+    margin-bottom: 10px;
   }
 }
 
@@ -646,7 +749,9 @@ h4.section-title::before {
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    height: 22vh;
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
     margin: 20px 15px 0;
   }
   .shares-list .shares-left {
@@ -667,7 +772,7 @@ h4.section-title::before {
     left: 0;
   }
   .shares-list .shares-items .shares-caption h5 {
-    font-size: 1em;
+    font-size: .9em;
     font-weight: 400;
     max-width: 90%;
     margin-bottom: 10px;
@@ -683,6 +788,36 @@ h4.section-title::before {
   }
   .btn-grp button {
     margin: 5px auto;
+  }
+  .application-btn {
+    width: 40px;
+    height: 40px;
+  }
+}
+
+@media only screen and (max-width: 768px) and (max-height: 1024px) {
+  .shares-list .shares-left {
+    width: 300px;
+  }
+  .shares-list .shares-right {
+    display: -webkit-box;
+    -ms-flex-wrap: unset;
+        flex-wrap: unset;
+  }
+  .shares-list .shares-right .shares-items {
+    height: 100%;
+    width: 300px;
+  }
+  .shares-list .shares-items .shares-caption {
+    -ms-flex-wrap: unset;
+        flex-wrap: unset;
+    left: 0;
+  }
+  .shares-list .shares-items .shares-caption h5 {
+    font-size: 1em;
+    font-weight: 400;
+    max-width: 80%;
+    margin-bottom: 10px;
   }
 }
 /*# sourceMappingURL=style.css.map */
