--- a/data/css/style.css
+++ b/data/css/style.css
@@ -638,8 +638,8 @@ h4.section-title::before {
           justify-content: center;
   margin-right: 15px;
   border: 1px solid transparent;
-  width: 28px;
-  height: 28px;
+  width: 30px;
+  height: 30px;
   padding-bottom: 2px;
   border-radius: 50%;
   -webkit-transition: all 0.2s;
@@ -648,6 +648,10 @@ h4.section-title::before {
 
 .footer .social-icons li:hover {
   border: 1px solid #0b2a49;
+}
+
+.footer .social-icons img {
+  width: 20px;
 }
 
 @media only screen and (max-width: 992px) {
