--- a/data/css/media.css
+++ b/data/css/media.css
@@ -75,6 +75,9 @@
     max-width: 80%;
     margin-bottom: 10px;
   }
+  .shares .inner-shares a {
+    width: 33.333333%;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -140,6 +143,12 @@
   .application-btn {
     width: 40px;
     height: 40px;
+  }
+  .shares .inner-shares a {
+    width: 50%;
+  }
+  .shares .inner-shares a h6 {
+    font-size: 0.9em;
   }
 }
 
