--- a/data/css/media.scss
+++ b/data/css/media.scss
@@ -71,6 +71,9 @@
             margin-bottom: 10px;
         }
     }
+    .shares .inner-shares a{
+        width: 33.333333%;
+    }
 }
 
 @media only screen and (max-width: 768px){
@@ -133,6 +136,13 @@
     .application-btn{
         width: 40px;
         height: 40px;
+    }
+    
+    .shares .inner-shares a{
+        width: 50%;
+    }
+    .shares .inner-shares a h6{
+        font-size: 0.9em;
     }
 }
 
