--- a/data/css/style.css
+++ b/data/css/style.css
@@ -844,11 +844,26 @@ h4.section-title::before {
   margin: 10px 10px 0 0;
 }
 
+.mainImg {
+  position: relative;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+}
+
 .mainImg img {
   height: 50vh;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+  z-index: 99;
+}
+
+.mainImg:hover img {
+  -webkit-filter: brightness(70%);
+          filter: brightness(70%);
+  cursor: pointer;
 }
 
 .thumbnails .active {
@@ -883,18 +898,43 @@ h4.section-title::before {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   height: 90vh;
-  width: auto;
+  width: 90%;
   -o-object-fit: contain;
      object-fit: contain;
   position: relative;
   z-index: 99;
 }
 
+.social-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .social-links a {
   margin: 0 5px;
   border: 1px solid transparent;
   border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 30px;
+  height: 30px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   padding: 5px;
+}
+
+.social-links a:hover {
+  border: 1px solid #0b2a49;
 }
 
 .social-links img {
