--- a/data/css/style.scss
+++ b/data/css/style.scss
@@ -629,15 +629,15 @@ h4.section-title {
 
 .mainImg {
     position: relative;
-    transition: all .3s;
+    transition: all 0.3s;
     img {
         height: 50vh;
         width: 100%;
         object-fit: cover;
-        transition: all .2s;
+        transition: all 0.2s;
         z-index: 99;
     }
-    &:hover img{
+    &:hover img {
         filter: brightness(70%);
         cursor: pointer;
     }
@@ -676,9 +676,9 @@ h4.section-title {
     }
 }
 
-.social-links{
+.social-links {
     display: flex;
-    a{
+    a {
         margin: 0 5px;
         border: 1px solid transparent;
         border-radius: 50%;
@@ -689,50 +689,118 @@ h4.section-title {
         height: 30px;
         justify-content: center;
         padding: 5px;
-        &:hover{
+        &:hover {
             border: 1px solid #0b2a49;
         }
     }
-    img{
+    img {
         width: 20px;
     }
 }
 
-.info-page{
-    h4{
+.info-page {
+    h4 {
         font-weight: 700;
         color: #e20001;
         margin-bottom: 20px;
     }
-    p{
+    p {
         color: #0b2a49;
     }
 }
 
-.table-tariff{
+.table-tariff {
     width: 100%;
-    th{
+    th {
         padding: 10px 20px;
         background-color: #e20001;
         color: #fff;
         font-weight: 500;
     }
-    td{
+    td {
         padding: 10px 20px;
         border-bottom: 1px solid #ccc;
     }
-    tr:hover{
+    tr:hover {
         background-color: #f0f0f0;
     }
 }
 
-.my-carousel{
-    width: 100%!important;
-    height: 70vh!important;
-    .carousel-inner, .carousel-item{
+.my-carousel {
+    width: 100% !important;
+    height: 70vh !important;
+    .carousel-inner,
+    .carousel-item {
         height: 100%;
     }
-    
+    img {
+        filter: brightness(60%);
+        object-fit: cover;
+    }
+    .carousel-caption {
+        top: 50%;
+        transform: translateY(-50%);
+        text-align: left;
+        bottom: auto;
+        p {
+            width: 50%;
+        }
+    }
+}
+
+#accordion {
+    .card {
+        border-radius: 0;
+        margin: 3px 0;
+        &-header {
+            border-radius: 0;
+            background-color: #f9f9f9;
+            border-bottom: 0;
+        }
+        &-link {
+            color: #0b2a49;
+            font-weight: 600;
+            display: block;
+            position: relative;
+            transition: all .3s;
+            &:after {
+                content: " "; /* fa-chevron-down */
+                position: absolute;
+                background: url(../image/icons/chevron-down.svg);
+                transition: all .3s;
+                right: 0;
+                width: 26px;
+                height: 26px;
+                background-position: center;
+                background-size: contain;
+            }
+            &[aria-expanded="true"]:after {
+                content: " "; 
+                position: absolute;
+                background: url(../image/icons/chevron-up.svg);
+                transition: all .3s;
+                right: 0;
+                width: 26px;
+                height: 26px;
+                background-position: center;
+                background-size: contain; /* fa-chevron-up */
+            }
+        }
+        .card-body {
+            border-top: 1px solid rgba(0, 0, 0, 0.125);
+        }
+    }
+}
+
+#accordion > a.card-link {
+}
+#accordion > a:after {
+    content: url(../image/icons/chevron-down.svg); /* fa-chevron-down */
+    position: absolute;
+    right: 0;
+}
+#accordion > a[aria-expanded="true"]:after {
+    content: url(../image/icons/chevron-up.svg); /* fa-chevron-up */
 }
 
 @import "media.scss";
