--- a/data/css/media.scss
+++ b/data/css/media.scss
@@ -1,3 +1,8 @@
+@media only screen and (min-width: 1025px){
+    .my-carousel{
+        height: 70vh;
+    }
+}
 
 
 @media only screen and (max-width: 992px){
@@ -73,6 +78,20 @@
     }
     .shares .inner-shares a{
         width: 33.333333%;
+    }
+    .my-carousel{
+        height: 100%;
+        .carousel-caption p{
+            width: 100%;
+            font-size: .8em;
+        }
+        .carousel-caption h5{
+            font-size: 1em;
+        }
+    }
+    #accordion .card-link{
+        font-size: .9em;
+        padding-right: 25px;
     }
 }
 
@@ -153,6 +172,12 @@
 @media only screen and (max-width: 576px){
     h4.section-title{
         font-size: .9em!important;
+    }
+    .my-carousel{
+        height: 40vh;
+        img{
+            height: 100%;
+        }
     }
 }
 
